--- a/dataModelingInPostgresProject/test.ipynb
+++ b/dataModelingInPostgresProject/test.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "%load_ext sql"
@@ -11,61 +13,409 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Connected: student@sparkifydb'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%sql postgresql://student:student@127.0.0.1/sparkifydb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://student:***@127.0.0.1/sparkifydb\n",
+      "5 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>songplay_id</th>\n",
+       "        <th>start_time</th>\n",
+       "        <th>user_id</th>\n",
+       "        <th>level</th>\n",
+       "        <th>song_id</th>\n",
+       "        <th>artist_id</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>2018-11-29 00:00:57.796000+00:00</td>\n",
+       "        <td>73</td>\n",
+       "        <td>paid</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2</td>\n",
+       "        <td>2018-11-29 00:01:30.796000+00:00</td>\n",
+       "        <td>24</td>\n",
+       "        <td>paid</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>3</td>\n",
+       "        <td>2018-11-29 00:04:01.796000+00:00</td>\n",
+       "        <td>24</td>\n",
+       "        <td>paid</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>4</td>\n",
+       "        <td>2018-11-29 00:04:55.796000+00:00</td>\n",
+       "        <td>73</td>\n",
+       "        <td>paid</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>5</td>\n",
+       "        <td>2018-11-29 00:07:13.796000+00:00</td>\n",
+       "        <td>24</td>\n",
+       "        <td>paid</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(1, datetime.datetime(2018, 11, 29, 0, 0, 57, 796000, tzinfo=psycopg2.tz.FixedOffsetTimezone(offset=0, name=None)), 73, 'paid', None, None),\n",
+       " (2, datetime.datetime(2018, 11, 29, 0, 1, 30, 796000, tzinfo=psycopg2.tz.FixedOffsetTimezone(offset=0, name=None)), 24, 'paid', None, None),\n",
+       " (3, datetime.datetime(2018, 11, 29, 0, 4, 1, 796000, tzinfo=psycopg2.tz.FixedOffsetTimezone(offset=0, name=None)), 24, 'paid', None, None),\n",
+       " (4, datetime.datetime(2018, 11, 29, 0, 4, 55, 796000, tzinfo=psycopg2.tz.FixedOffsetTimezone(offset=0, name=None)), 73, 'paid', None, None),\n",
+       " (5, datetime.datetime(2018, 11, 29, 0, 7, 13, 796000, tzinfo=psycopg2.tz.FixedOffsetTimezone(offset=0, name=None)), 24, 'paid', None, None)]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%sql SELECT * FROM songplays LIMIT 5;"
+    "%sql SELECT * FROM fact_songplays WHERE song_id IS NULL LIMIT 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://student:***@127.0.0.1/sparkifydb\n",
+      "1 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>count</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>96</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(96,)]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%sql SELECT * FROM users LIMIT 5;"
+    "%sql SELECT * FROM dim_users LIMIT 5;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://student:***@127.0.0.1/sparkifydb\n",
+      "5 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>song_id</th>\n",
+       "        <th>title</th>\n",
+       "        <th>artist_id</th>\n",
+       "        <th>year</th>\n",
+       "        <th>duration</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SOINLJW12A8C13314C</td>\n",
+       "        <td>City Slickers</td>\n",
+       "        <td>AR8IEZO1187B99055E</td>\n",
+       "        <td>2008</td>\n",
+       "        <td>149.86404</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SOGDBUF12A8C140FAA</td>\n",
+       "        <td>Intro</td>\n",
+       "        <td>AR558FS1187FB45658</td>\n",
+       "        <td>2003</td>\n",
+       "        <td>75.67628</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SORRZGD12A6310DBC3</td>\n",
+       "        <td>Harajuku Girls</td>\n",
+       "        <td>ARVBRGZ1187FB4675A</td>\n",
+       "        <td>2004</td>\n",
+       "        <td>290.55955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SONWXQJ12A8C134D94</td>\n",
+       "        <td>The Ballad Of Sleeping Beauty</td>\n",
+       "        <td>ARNF6401187FB57032</td>\n",
+       "        <td>1994</td>\n",
+       "        <td>305.162</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SOFCHDR12AB01866EF</td>\n",
+       "        <td>Living Hell</td>\n",
+       "        <td>AREVWGE1187B9B890A</td>\n",
+       "        <td>0</td>\n",
+       "        <td>282.43546</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('SOINLJW12A8C13314C', 'City Slickers', 'AR8IEZO1187B99055E', 2008, 149.86404),\n",
+       " ('SOGDBUF12A8C140FAA', 'Intro', 'AR558FS1187FB45658', 2003, 75.67628),\n",
+       " ('SORRZGD12A6310DBC3', 'Harajuku Girls', 'ARVBRGZ1187FB4675A', 2004, 290.55955),\n",
+       " ('SONWXQJ12A8C134D94', 'The Ballad Of Sleeping Beauty', 'ARNF6401187FB57032', 1994, 305.162),\n",
+       " ('SOFCHDR12AB01866EF', 'Living Hell', 'AREVWGE1187B9B890A', 0, 282.43546)]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%sql SELECT * FROM songs LIMIT 5;"
+    "%sql SELECT * FROM dim_songs LIMIT 5;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://student:***@127.0.0.1/sparkifydb\n",
+      "5 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>artist_id</th>\n",
+       "        <th>name</th>\n",
+       "        <th>location</th>\n",
+       "        <th>latitude</th>\n",
+       "        <th>longitude</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>AR8IEZO1187B99055E</td>\n",
+       "        <td>Marc Shaiman</td>\n",
+       "        <td>Unknown</td>\n",
+       "        <td>9999999.99</td>\n",
+       "        <td>9999999.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>AR558FS1187FB45658</td>\n",
+       "        <td>40 Grit</td>\n",
+       "        <td>Unknown</td>\n",
+       "        <td>9999999.99</td>\n",
+       "        <td>9999999.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>ARVBRGZ1187FB4675A</td>\n",
+       "        <td>Gwen Stefani</td>\n",
+       "        <td>Unknown</td>\n",
+       "        <td>9999999.99</td>\n",
+       "        <td>9999999.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>ARNF6401187FB57032</td>\n",
+       "        <td>Sophie B. Hawkins</td>\n",
+       "        <td>New York, NY [Manhattan]</td>\n",
+       "        <td>40.79086</td>\n",
+       "        <td>-73.96644</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>AREVWGE1187B9B890A</td>\n",
+       "        <td>Bitter End</td>\n",
+       "        <td>Noci (BA)</td>\n",
+       "        <td>-13.442</td>\n",
+       "        <td>-41.9952</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('AR8IEZO1187B99055E', 'Marc Shaiman', 'Unknown', 9999999.99, 9999999.99),\n",
+       " ('AR558FS1187FB45658', '40 Grit', 'Unknown', 9999999.99, 9999999.99),\n",
+       " ('ARVBRGZ1187FB4675A', 'Gwen Stefani', 'Unknown', 9999999.99, 9999999.99),\n",
+       " ('ARNF6401187FB57032', 'Sophie B. Hawkins', 'New York, NY [Manhattan]', 40.79086, -73.96644),\n",
+       " ('AREVWGE1187B9B890A', 'Bitter End', 'Noci (BA)', -13.442, -41.9952)]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%sql SELECT * FROM artists LIMIT 5;"
+    "%sql SELECT * FROM dim_artists LIMIT 5;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://student:***@127.0.0.1/sparkifydb\n",
+      "5 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>start_time</th>\n",
+       "        <th>hour</th>\n",
+       "        <th>day</th>\n",
+       "        <th>week</th>\n",
+       "        <th>month</th>\n",
+       "        <th>year</th>\n",
+       "        <th>weekday</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2018-11-29 00:00:57.796000+00:00</td>\n",
+       "        <td>29</td>\n",
+       "        <td>0</td>\n",
+       "        <td>48</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>Thursday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2018-11-27 00:52:12.796000+00:00</td>\n",
+       "        <td>27</td>\n",
+       "        <td>0</td>\n",
+       "        <td>48</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>Tuesday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2018-11-11 02:33:56.796000+00:00</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2</td>\n",
+       "        <td>45</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>Sunday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2018-11-18 02:33:21.796000+00:00</td>\n",
+       "        <td>18</td>\n",
+       "        <td>2</td>\n",
+       "        <td>46</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>Sunday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2018-11-08 01:11:50.796000+00:00</td>\n",
+       "        <td>8</td>\n",
+       "        <td>1</td>\n",
+       "        <td>45</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>Thursday</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(datetime.datetime(2018, 11, 29, 0, 0, 57, 796000, tzinfo=psycopg2.tz.FixedOffsetTimezone(offset=0, name=None)), 29, 0, 48, 11, 2018, 'Thursday'),\n",
+       " (datetime.datetime(2018, 11, 27, 0, 52, 12, 796000, tzinfo=psycopg2.tz.FixedOffsetTimezone(offset=0, name=None)), 27, 0, 48, 11, 2018, 'Tuesday'),\n",
+       " (datetime.datetime(2018, 11, 11, 2, 33, 56, 796000, tzinfo=psycopg2.tz.FixedOffsetTimezone(offset=0, name=None)), 11, 2, 45, 11, 2018, 'Sunday'),\n",
+       " (datetime.datetime(2018, 11, 18, 2, 33, 21, 796000, tzinfo=psycopg2.tz.FixedOffsetTimezone(offset=0, name=None)), 18, 2, 46, 11, 2018, 'Sunday'),\n",
+       " (datetime.datetime(2018, 11, 8, 1, 11, 50, 796000, tzinfo=psycopg2.tz.FixedOffsetTimezone(offset=0, name=None)), 8, 1, 45, 11, 2018, 'Thursday')]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%sql SELECT * FROM time LIMIT 5;"
+    "%sql SELECT * FROM dim_time LIMIT 5;"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "source": [
     "## REMEMBER: Restart this notebook to close connection to `sparkifydb`\n",
     "Each time you run the cells above, remember to restart this notebook to close the connection to your database. Otherwise, you won't be able to run your code in `create_tables.py`, `etl.py`, or `etl.ipynb` files since you can't make multiple connections to the same database (in this case, sparkifydb)."
@@ -74,7 +424,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "outputs": [],
    "source": []
   }
@@ -95,9 +447,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
