data modeling in Cassandra 2nd Review

--- a/dataModelingInCassandraProject/Project_1B_ Project_Template.ipynb
+++ b/dataModelingInCassandraProject/Project_1B_ Project_Template.ipynb
@@ -126,7 +126,7 @@
     "        \n",
     "         # extracting each data row one by one and append it        \n",
     "        for line in csvreader:\n",
-    "#             print(line)\n",
+    "            # print(line)\n",
     "            full_data_rows_list.append(line) \n",
     "            \n",
     "# uncomment the code below if you would like to get total number of rows \n",
@@ -302,7 +302,7 @@
     "editable": true
    },
    "source": [
-    "## Create queries to ask the following three questions of the data\n",
+    "## QUESTION: create queries to ask the following three questions of the data\n",
     "\n",
     " 1. Give me the artist, song title and song's length in the music app history that was heard during  sessionId = 338, and itemInSession  = 4\n",
     "\n",
@@ -327,7 +327,7 @@
     "* Query 2 → will be answered by the `user_activities` table;\n",
     "* Query 3 → the `song_audience` table will be used to answer this question;  \n",
     "  \n",
-    "First, a function that sequentially executes CQL statements is defined.  \n",
+    "First, two functions to execute CQL statements are defined.  \n",
     "  \n",
     "Then, all `DROP TABLE` and `CREATE TABLE` statements are declared in the next two cells"
    ]
@@ -426,8 +426,17 @@
    },
    "source": [
     "#### `CREATE TABLE` statements\n",
-    "are declared for the three tables involved in this exercise.  \n",
-    "All tables are then created at once:"
+    "are declared for the three tables involved in this exercise. All tables are then created at once.  \n",
+    "  \n",
+    "**Modeling rationale:**  \n",
+    "  \n",
+    "* `session_acitivities (query 1)` **COMPOSITE PRIMARY KEY made of** → PARTITION KEY set to \"session_id\" and \"item_in_session\" as they are present in the `SELECT` statement's `WHERE` clause: they're the criteria used to filter our results. CLUSTERING COLUMNS were set to \"artist_name\" and \"song_title\" to sort the data according to these two columns.  \n",
+    "  \n",
+    "  \n",
+    "* `user_activities (query 2)` **COMPOSITE PRIMARY KEY made of** → PARTITION KEY set to \"user_id\" and \"session_id\" because they're criteria to retrieve our results, used in the `SELECT` statement's `WHERE` clause. CLUSTERING COLUMN was set to \"item_in_session\" to sort session events in ascending order.  \n",
+    "  \n",
+    "  \n",
+    "* `song_audience (query 3)` **COMPOSITE PRIMARY KEY made of** → PARTITION KEY set to \"song_title\" as this is the attribute we'll be filtering to obtain results. \"user_id\" has been set to CLUSTERING COLUMN not only for the partition data to be sorted upon it, but also to make sure each row has a unique PRIMARY KEY."
    ]
   },
   {
@@ -488,14 +497,11 @@
     "    CREATE TABLE IF NOT EXISTS\n",
     "        udacity.song_audience(\n",
     "                 song_title TEXT\n",
+    "                ,user_id INT\n",
     "                ,user_first_name TEXT\n",
     "                ,user_last_name TEXT\n",
     "                \n",
-    "                ,PRIMARY KEY(\n",
-    "                     song_title\n",
-    "                    ,user_first_name\n",
-    "                    ,user_last_name\n",
-    "                )\n",
+    "                ,PRIMARY KEY(song_title, user_id)\n",
     "            )\n",
     "    ;\n",
     "\"\"\"\n",
@@ -736,11 +742,13 @@
     "    INSERT INTO\n",
     "        udacity.song_audience(\n",
     "             song_title\n",
+    "            ,user_id\n",
     "            ,user_first_name\n",
     "            ,user_last_name\n",
     "        )\n",
     "    VALUES(\n",
     "         %s\n",
+    "        ,%s\n",
     "        ,%s\n",
     "        ,%s\n",
     "    );\n",
@@ -755,7 +763,7 @@
     "    \n",
     "    for line in csvreader:\n",
     "\n",
-    "        session.execute(insert_into_song_audience, (line[9], line[1], line[4]))"
+    "        session.execute(insert_into_song_audience, (line[9], int(line[10]), line[1], line[4]))"
    ]
   },
   {
@@ -779,9 +787,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Row(song_title='All Hands Against His Own', user_first_name='Jacqueline', user_last_name='Lynch')\n",
-      "Row(song_title='All Hands Against His Own', user_first_name='Sara', user_last_name='Johnson')\n",
-      "Row(song_title='All Hands Against His Own', user_first_name='Tegan', user_last_name='Levine')\n"
+      "Row(user_first_name='Jacqueline', user_last_name='Lynch')\n",
+      "Row(user_first_name='Tegan', user_last_name='Levine')\n",
+      "Row(user_first_name='Sara', user_last_name='Johnson')\n"
      ]
     }
    ],
@@ -789,8 +797,7 @@
     "\n",
     "select_song_audience = \"\"\"\n",
     "    SELECT\n",
-    "         song_title\n",
-    "        ,user_first_name\n",
+    "         user_first_name\n",
     "        ,user_last_name\n",
     "    FROM\n",
     "        udacity.song_audience\n",
