function to modularize data insertion from CSV files

--- a/dataModelingInCassandraProject/Project_1B_ Project_Template.ipynb
+++ b/dataModelingInCassandraProject/Project_1B_ Project_Template.ipynb
@@ -365,7 +365,31 @@
     "\n",
     "    for row in rows:\n",
     "        print(row)\n",
-    "        "
+    "        \n",
+    "        \n",
+    "def insert_cassandra_data_from_csv(insert_into_statement, csv_column_coordinates):\n",
+    "    \"\"\" Inserts data into Apache Cassandra tables.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    insert_into_statement (string): A CQL INSERT INTO statement for the target table.\n",
+    "        \n",
+    "    csv_column_coordinates (string): a string containing a tuple of items in the form \n",
+    "    'line[column_index]' which will be evaluated to a Python literal for execution.\n",
+    "    Example:\n",
+    "        '(line[0], line[1], line[n])'\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    file = 'event_datafile_new.csv'\n",
+    "\n",
+    "    with open(file, encoding = 'utf8') as f:\n",
+    "\n",
+    "        csvreader = csv.reader(f)\n",
+    "        next(csvreader) # skip header\n",
+    "\n",
+    "        for line in csvreader:\n",
+    "\n",
+    "            session.execute(insert_into_statement, eval(csv_column_coordinates))        "
    ]
   },
   {
@@ -549,16 +573,11 @@
     "    );\n",
     "\"\"\"\n",
     "\n",
-    "file = 'event_datafile_new.csv'\n",
+    "# a variable holding csv column coordinates is created\n",
+    "session_activities_csv_columns = '(int(line[8]), int(line[3]), line[0], line[9], float(line[5]))'\n",
     "\n",
-    "with open(file, encoding = 'utf8') as f:\n",
-    "    \n",
-    "    csvreader = csv.reader(f)\n",
-    "    next(csvreader) # skip header\n",
-    "    \n",
-    "    for line in csvreader:\n",
-    "\n",
-    "        session.execute(insert_into_session_activities, (int(line[8]), int(line[3]), line[0], line[9], float(line[5])))"
+    "# a UDF is called to insert data into the table\n",
+    "insert_cassandra_data_from_csv(insert_into_session_activities, session_activities_csv_columns)"
    ]
   },
   {
@@ -648,24 +667,11 @@
     "    );\n",
     "\"\"\"\n",
     "\n",
-    "file = 'event_datafile_new.csv'\n",
+    "# a variable holding csv column coordinates is created\n",
+    "user_activities_csv_columns = '(int(line[10]), int(line[8]), int(line[3]), line[1], line[4], line[0], line[9])'\n",
     "\n",
-    "with open(file, encoding = 'utf8') as f:\n",
-    "    \n",
-    "    csvreader = csv.reader(f)\n",
-    "    next(csvreader) # skip header\n",
-    "    \n",
-    "    for line in csvreader:\n",
-    "\n",
-    "        session.execute(insert_into_user_activities, ( int(line[10])\n",
-    "                                                      ,int(line[8])\n",
-    "                                                      ,int(line[3])\n",
-    "                                                      ,line[1]\n",
-    "                                                      ,line[4]\n",
-    "                                                      ,line[0]\n",
-    "                                                      ,line[9]\n",
-    "                                                     )\n",
-    "                       )"
+    "# a UDF is called to insert data into the table\n",
+    "insert_cassandra_data_from_csv(insert_into_user_activities, user_activities_csv_columns)"
    ]
   },
   {
@@ -754,16 +760,11 @@
     "    );\n",
     "\"\"\"\n",
     "\n",
-    "file = 'event_datafile_new.csv'\n",
+    "# a variable holding csv column coordinates is created\n",
+    "song_audience_csv_columns = '(line[9], int(line[10]), line[1], line[4])'\n",
     "\n",
-    "with open(file, encoding = 'utf8') as f:\n",
-    "    \n",
-    "    csvreader = csv.reader(f)\n",
-    "    next(csvreader) # skip header\n",
-    "    \n",
-    "    for line in csvreader:\n",
-    "\n",
-    "        session.execute(insert_into_song_audience, (line[9], int(line[10]), line[1], line[4]))"
+    "# a UDF is called to insert data into the table\n",
+    "insert_cassandra_data_from_csv(insert_into_song_audience, song_audience_csv_columns)"
    ]
   },
   {
