studies up to 2020-01-25

--- a/Exercises Notebooks/03 Data Warehouses/03 DW L3 Exercise 2 - Infra-as-Code Solution.ipynb
+++ b/Exercises Notebooks/03 Data Warehouses/03 DW L3 Exercise 2 - Infra-as-Code Solution.ipynb
@@ -584,9 +584,9 @@
     "    defaultSg = list(vpc.security_groups.all())\n",
     "    \n",
     "    for sg in defaultSg:\n",
-    "    \n",
-    "#         print(defaultSg)\n",
+    "\n",
     "        print(sg)\n",
+    "        \n",
     "        try:\n",
     "            sg.authorize_ingress(\n",
     "                GroupName=sg.group_name,\n",
@@ -641,9 +641,7 @@
     }
    ],
    "source": [
-    "# conn_string=\"postgresql://{}:{}@{}:{}/{}\".format(DWH_DB_USER, DWH_DB_PASSWORD, DWH_ENDPOINT, DWH_PORT,DWH_DB)\n",
-    "\n",
-    "conn_string = \"postgresql://dwhuser:Passw0rd@dwhcluster.cnoetczdeddb.us-west-2.redshift.amazonaws.com:5439/dwh\"\n",
+    "conn_string=\"postgresql://{}:{}@{}:{}/{}\".format(DWH_DB_USER, DWH_DB_PASSWORD, DWH_ENDPOINT, DWH_PORT,DWH_DB)\n",
     "\n",
     "print(conn_string)\n",
     "%sql $conn_string"
