studies up to 2020-02-15

--- a/Exercises Notebooks/03 Data Warehouses/03 DW L3 Exercise 4 - Table Design - Solution.ipynb
+++ b/Exercises Notebooks/03 Data Warehouses/03 DW L3 Exercise 4 - Table Design - Solution.ipynb
@@ -63,11 +63,11 @@
    "source": [
     "# FILL IN THE REDSHIFT ENDPOINT HERE\n",
     "# e.g. DWH_ENDPOINT=\"redshift-cluster-1.csmamz5zxmle.us-west-2.redshift.amazonaws.com\" \n",
-    "DWH_ENDPOINT=\"dwhcluster.csmamz5zxmle.us-west-2.redshift.amazonaws.com\"\n",
+    "DWH_ENDPOINT=config.get(\"DWH\",\"DWH_ENDPOINT\")\n",
     "    \n",
     "#FILL IN THE IAM ROLE ARN you got in step 2.2 of the previous exercise\n",
     "#e.g DWH_ROLE_ARN=\"arn:aws:iam::988332130976:role/dwhRole\"\n",
-    "DWH_ROLE_ARN=\"arn:aws:iam::988332130976:role/dwhRole\""
+    "DWH_ROLE_ARN=config.get(\"DWH\",\"DWH_ROLE_ARN\")"
    ]
   },
   {
@@ -85,7 +85,7 @@
    "source": [
     "import os \n",
     "conn_string=\"postgresql://{}:{}@{}:{}/{}\".format(DWH_DB_USER, DWH_DB_PASSWORD, DWH_ENDPOINT, DWH_PORT,DWH_DB)\n",
-    "print(conn_string)\n",
+    "# print(conn_string)\n",
     "%sql $conn_string"
    ]
   },
@@ -364,9 +364,9 @@
     "    \n",
     "    for table in tables:\n",
     "        SQL_COPY = \"\"\"\n",
-    "copy {} from 's3://awssampledbuswest2/ssbgz/{}' \n",
-    "credentials 'aws_iam_role={}'\n",
-    "gzip region 'us-west-2';\n",
+    "            copy {} from 's3://awssampledbuswest2/ssbgz/{}' \n",
+    "            credentials 'aws_iam_role={}'\n",
+    "            gzip region 'us-west-2';\n",
     "        \"\"\".format(table,table, DWH_ROLE_ARN)\n",
     "\n",
     "        print(\"======= LOADING TABLE: ** {} ** IN SCHEMA ==> {} =======\".format(table, schema))\n",
