studies up to 2020-04-06 9:07 AM

--- a/Project 3 Data Warehousing with AWS Redshift/infrastructureSetup.ipynb
+++ b/Project 3 Data Warehousing with AWS Redshift/infrastructureSetup.ipynb
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
        "'Connected: sparkify@sparkify_dw'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,9 +378,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ResponseMetadata': {'RequestId': 'a7dfd354-5279-4675-9c2a-ba3130b670eb',\n",
+       "  'HTTPStatusCode': 200,\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': 'a7dfd354-5279-4675-9c2a-ba3130b670eb',\n",
+       "   'content-type': 'text/xml',\n",
+       "   'content-length': '200',\n",
+       "   'date': 'Sat, 04 Apr 2020 19:55:13 GMT'},\n",
+       "  'RetryAttempts': 0}}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# the S3 Read-Only policy is detached\n",
     "iam.detach_role_policy(\n",
