2020-04-19 Spark Project ETL script finalization

--- a/Project 3 Data Warehousing with AWS Redshift/sparkifyDataExploration.ipynb
+++ b/Project 3 Data Warehousing with AWS Redshift/sparkifyDataExploration.ipynb
@@ -475,11 +475,11 @@
    "metadata": {},
    "source": [
     "## User subscription level history as Type 2 SCD\n",
-    "User subscription level changes accross time are modeled with Type 2 Slowly Changing Dimension technique:  \n",
-    "* each change in this attribute triggers the insertion of a new (with a new surrogate key for the user) in the table.  \n",
+    "User subscription level changes over time are modeled with Type 2 Slowly Changing Dimension technique:  \n",
+    "* each change in this attribute triggers the insertion of a new row (with a new surrogate key for the user) in the table.  \n",
     "* these attributes receive timestamps indicating the timespan during which they are valid.  \n",
     "  \n",
-    "This enables precise analysis of what signature level a user had when listened to a given song, for example.  \n",
+    "This enables precise analysis of what signature level a user had when he/she listened to a given song, for example.  \n",
     "  \n",
     "Take a look at user_id 15, \"Lily\" for example:"
    ]
