--- a/Project 3 Data Warehousing with AWS Redshift/infrastructureSetup.ipynb
+++ b/Project 3 Data Warehousing with AWS Redshift/infrastructureSetup.ipynb
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,16 +304,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sql extension is already loaded. To reload it, use:\n",
+      "  %reload_ext sql\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "'Connected: sparkify@sparkify_dw'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,9 +345,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Cluster': {'ClusterIdentifier': 'dwhcluster',\n",
+       "  'NodeType': 'dc2.large',\n",
+       "  'ClusterStatus': 'deleting',\n",
+       "  'ClusterAvailabilityStatus': 'Modifying',\n",
+       "  'MasterUsername': 'sparkify',\n",
+       "  'DBName': 'sparkify_dw',\n",
+       "  'Endpoint': {'Address': 'dwhcluster.cnoetczdeddb.us-west-2.redshift.amazonaws.com',\n",
+       "   'Port': 5439},\n",
+       "  'ClusterCreateTime': datetime.datetime(2020, 6, 15, 12, 3, 42, 791000, tzinfo=tzutc()),\n",
+       "  'AutomatedSnapshotRetentionPeriod': 1,\n",
+       "  'ManualSnapshotRetentionPeriod': -1,\n",
+       "  'ClusterSecurityGroups': [],\n",
+       "  'VpcSecurityGroups': [{'VpcSecurityGroupId': 'sg-0c94b155',\n",
+       "    'Status': 'active'}],\n",
+       "  'ClusterParameterGroups': [{'ParameterGroupName': 'default.redshift-1.0',\n",
+       "    'ParameterApplyStatus': 'in-sync'}],\n",
+       "  'ClusterSubnetGroupName': 'default',\n",
+       "  'VpcId': 'vpc-674bd61f',\n",
+       "  'AvailabilityZone': 'us-west-2d',\n",
+       "  'PreferredMaintenanceWindow': 'tue:08:00-tue:08:30',\n",
+       "  'PendingModifiedValues': {},\n",
+       "  'ClusterVersion': '1.0',\n",
+       "  'AllowVersionUpgrade': True,\n",
+       "  'NumberOfNodes': 2,\n",
+       "  'PubliclyAccessible': True,\n",
+       "  'Encrypted': False,\n",
+       "  'Tags': [],\n",
+       "  'EnhancedVpcRouting': False,\n",
+       "  'IamRoles': [{'IamRoleArn': 'arn:aws:iam::750424551752:role/dwhRole',\n",
+       "    'ApplyStatus': 'in-sync'}],\n",
+       "  'MaintenanceTrackName': 'current',\n",
+       "  'DeferredMaintenanceWindows': [],\n",
+       "  'NextMaintenanceWindowStartTime': datetime.datetime(2020, 6, 16, 8, 0, tzinfo=tzutc())},\n",
+       " 'ResponseMetadata': {'RequestId': 'eb484c36-b8a1-407c-b3fe-e598944153b0',\n",
+       "  'HTTPStatusCode': 200,\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': 'eb484c36-b8a1-407c-b3fe-e598944153b0',\n",
+       "   'content-type': 'text/xml',\n",
+       "   'content-length': '2391',\n",
+       "   'vary': 'accept-encoding',\n",
+       "   'date': 'Mon, 15 Jun 2020 13:21:43 GMT'},\n",
+       "  'RetryAttempts': 0}}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "redshift.delete_cluster(\n",
     "     ClusterIdentifier=CLUSTER_IDENTIFIER\n",
@@ -357,9 +416,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ClusterNotFoundFault",
+     "evalue": "An error occurred (ClusterNotFound) when calling the DescribeClusters operation: Cluster dwhcluster not found.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mClusterNotFoundFault\u001b[0m                      Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-15-e9d25e5a8ef9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m cluster_status = redshift.describe_clusters(\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0mClusterIdentifier\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mCLUSTER_IDENTIFIER\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m )\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcluster_status\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Clusters'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'ClusterStatus'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\botocore\\client.py\u001b[0m in \u001b[0;36m_api_call\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m    274\u001b[0m                     \"%s() only accepts keyword arguments.\" % py_operation_name)\n\u001b[0;32m    275\u001b[0m             \u001b[1;31m# The \"self\" in this scope is referring to the BaseClient.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 276\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_make_api_call\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moperation_name\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    277\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    278\u001b[0m         \u001b[0m_api_call\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__name__\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpy_operation_name\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\botocore\\client.py\u001b[0m in \u001b[0;36m_make_api_call\u001b[1;34m(self, operation_name, api_params)\u001b[0m\n\u001b[0;32m    584\u001b[0m             \u001b[0merror_code\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mparsed_response\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Error\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Code\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    585\u001b[0m             \u001b[0merror_class\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexceptions\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfrom_code\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0merror_code\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 586\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0merror_class\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mparsed_response\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moperation_name\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    587\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    588\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mparsed_response\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mClusterNotFoundFault\u001b[0m: An error occurred (ClusterNotFound) when calling the DescribeClusters operation: Cluster dwhcluster not found."
+     ]
+    }
+   ],
    "source": [
     "cluster_status = redshift.describe_clusters(\n",
     "    ClusterIdentifier = CLUSTER_IDENTIFIER\n",
@@ -378,22 +451,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'ResponseMetadata': {'RequestId': 'a7dfd354-5279-4675-9c2a-ba3130b670eb',\n",
+       "{'ResponseMetadata': {'RequestId': 'e2f3c8a7-15e6-4906-8512-c3b4f06febfa',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amzn-requestid': 'a7dfd354-5279-4675-9c2a-ba3130b670eb',\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': 'e2f3c8a7-15e6-4906-8512-c3b4f06febfa',\n",
        "   'content-type': 'text/xml',\n",
        "   'content-length': '200',\n",
-       "   'date': 'Sat, 04 Apr 2020 19:55:13 GMT'},\n",
+       "   'date': 'Mon, 15 Jun 2020 13:25:55 GMT'},\n",
        "  'RetryAttempts': 0}}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,6 +481,13 @@
     "# the Role is then deleted\n",
     "iam.delete_role(RoleName=REDSHIFT_ROLE_NAME)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
