studies up to 2020-06-18 11:48 PM

--- a/Project 3 Data Warehousing with AWS Redshift/infrastructureSetup.ipynb
+++ b/Project 3 Data Warehousing with AWS Redshift/infrastructureSetup.ipynb
@@ -197,13 +197,13 @@
    "metadata": {},
    "source": [
     "#### use the `describe_clusters()` method\n",
-    "to check cluster creation status and retrive useful data on the cluster\n",
+    "to check cluster creation status and retrieve useful data on the cluster\n",
     "> [Redshift's boto3 `describe_clusters()` documentation](<https://boto3.amazonaws.com/v1/documentation/api/latest/reference/services/redshift.html#Redshift.Client.describe_clusters>)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
